@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-27T12:14:52Z",
-  "count_outdated" : 3044,
-  "uniques_outdated" : 1019,
+  "timestamp" : "2025-07-28T00:47:39Z",
+  "count_outdated" : 3045,
+  "uniques_outdated" : 1020,
   "count" : 3049,
   "uniques" : 1024,
   "views" : [
-    {
-      "timestamp": "2025-07-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-07-16T00:00:00Z",
       "count": 2,
