@@ -1,3 +1,12 @@
+2025-07-28T00:47:39Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16557405843 # 1125
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-28
+* notice: last 14d: unq all: 4 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 1019 3044 / 1024 3049
+* notice: next accum: outdated-unq outdated-all / unq all: 1020 3045 / 1024 3049
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-07-13] / []
+
 2025-07-27T12:14:52Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16551002036 # 1124
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-27
